Completed Viterbi algorithm

--- a/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-2/C2_W2_Assignment.ipynb
@@ -1193,45 +1193,45 @@
     "            \n",
     "        ### START CODE HERE (Replace instances of 'None' with your code EXCEPT the first 'best_path_i = None') ###\n",
     "        # For each unique POS tag that the current word can be\n",
-    "        for j in None: # complete this line\n",
+    "        for j in range(num_tags): # complete this line\n",
     "            \n",
     "            # Initialize best_prob for word i to negative infinity\n",
-    "            best_prob_i = None\n",
+    "            best_prob_i = float('-inf')\n",
     "            \n",
     "            # Initialize best_path for current word i to None\n",
     "            best_path_i = None\n",
     "\n",
     "            # For each POS tag that the previous word can be:\n",
-    "            for k in None: # complete this line\n",
+    "            for k in range(num_tags): # complete this line\n",
     "            \n",
     "                # Calculate the probability = \n",
     "                # best probs of POS tag k, previous word i-1 + \n",
     "                # log(prob of transition from POS k to POS j) + \n",
     "                # log(prob that emission of POS j is word i)\n",
-    "                prob = None\n",
+    "                prob = best_probs[k,i-1] + math.log(A[k,j]) + math.log(B[j,vocab[test_corpus[i]]])\n",
     "\n",
     "                # check if this path's probability is greater than\n",
     "                # the best probability up to and before this point\n",
-    "                if None: # complete this line\n",
+    "                if prob > best_prob_i: # complete this line\n",
     "                    \n",
     "                    # Keep track of the best probability\n",
-    "                    best_prob_i = None\n",
+    "                    best_prob_i = prob\n",
     "                    \n",
     "                    # keep track of the POS tag of the previous word\n",
     "                    # that is part of the best path.  \n",
     "                    # Save the index (integer) associated with \n",
     "                    # that previous word's POS tag\n",
-    "                    best_path_i = None\n",
+    "                    best_path_i = k\n",
     "\n",
     "            # Save the best probability for the \n",
     "            # given current word's POS tag\n",
     "            # and the position of the current word inside the corpus\n",
-    "            best_probs[j,i] = None\n",
+    "            best_probs[j,i] = best_prob_i\n",
     "            \n",
     "            # Save the unique integer ID of the previous POS tag\n",
     "            # into best_paths matrix, for the POS tag of the current word\n",
     "            # and the position of the current word inside the corpus.\n",
-    "            best_paths[j,i] = None\n",
+    "            best_paths[j,i] = best_path_i\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "    return best_probs, best_paths"
@@ -1387,44 +1387,44 @@
     "    # Go through each POS tag for the last word (last column of best_probs)\n",
     "    # in order to find the row (POS tag integer ID) \n",
     "    # with highest probability for the last word\n",
-    "    for k in None: # complete this line\n",
+    "    for k in range(num_tags): # complete this line\n",
     "\n",
     "        # If the probability of POS tag at row k \n",
     "        # is better than the previously best probability for the last word:\n",
-    "        if None: # complete this line\n",
+    "        if best_probs[k,-1] > best_prob_for_last_word: # complete this line\n",
     "            \n",
     "            # Store the new best probability for the last word\n",
-    "            best_prob_for_last_word = None\n",
+    "            best_prob_for_last_word = best_probs[k,-1]\n",
     "    \n",
     "            # Store the unique integer ID of the POS tag\n",
     "            # which is also the row number in best_probs\n",
-    "            z[m - 1] = None\n",
+    "            z[m - 1] = k\n",
     "            \n",
     "    # Convert the last word's predicted POS tag\n",
     "    # from its unique integer ID into the string representation\n",
     "    # using the 'states' list\n",
     "    # store this in the 'pred' array for the last word\n",
-    "    pred[m - 1] = None\n",
+    "    pred[m - 1] = states[z[m - 1]]\n",
     "    \n",
     "    ## Step 2 ##\n",
     "    # Find the best POS tags by walking backward through the best_paths\n",
     "    # From the last word in the corpus to the 0th word in the corpus\n",
-    "    for i in range(None, None, None): # complete this line\n",
+    "    for i in range(m-1, 0, -1): # complete this line\n",
     "        \n",
     "        # Retrieve the unique integer ID of\n",
     "        # the POS tag for the word at position 'i' in the corpus\n",
-    "        pos_tag_for_word_i = None\n",
+    "        pos_tag_for_word_i = z[i]\n",
     "        \n",
     "        # In best_paths, go to the row representing the POS tag of word i\n",
     "        # and the column representing the word's position in the corpus\n",
     "        # to retrieve the predicted POS for the word at position i-1 in the corpus\n",
-    "        z[i - 1] = None\n",
+    "        z[i - 1] = best_paths[pos_tag_for_word_i,i]\n",
     "        \n",
     "        # Get the previous word's POS tag in string form\n",
     "        # Use the 'states' list, \n",
     "        # where the key is the unique integer ID of the POS tag,\n",
     "        # and the value is the string representation of that POS tag\n",
-    "        pred[i - 1] = None\n",
+    "        pred[i - 1] = states[z[i - 1]]\n",
     "        \n",
     "     ### END CODE HERE ###\n",
     "    return pred"
@@ -1517,25 +1517,25 @@
     "    for prediction, y in zip(pred, y):\n",
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "        # Split the label into the word and the POS tag\n",
-    "        word_tag_tuple = None\n",
+    "        word_tag_tuple = y.split()\n",
     "        \n",
     "        # Check that there is actually a word and a tag\n",
     "        # no more and no less than 2 items\n",
-    "        if None: # complete this line\n",
+    "        if len(word_tag_tuple) != 2: # complete this line\n",
     "            continue \n",
     "\n",
     "        # store the word and tag separately\n",
-    "        word, tag = None\n",
+    "        word, tag = word_tag_tuple[0],word_tag_tuple[1]\n",
     "        \n",
     "        # Check if the POS tag label matches the prediction\n",
-    "        if None: # complete this line\n",
+    "        if prediction == tag: # complete this line\n",
     "            \n",
     "            # count the number of times that the prediction\n",
     "            # and label match\n",
-    "            num_correct += None\n",
+    "            num_correct += 1\n",
     "            \n",
     "        # keep track of the total number of examples (that have valid labels)\n",
-    "        total += None\n",
+    "        total += 1\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "    return num_correct/total"
