Implemented "tokenize_sentences"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -278,16 +278,16 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Go through each sentence\n",
-    "    for sentence in None:\n",
+    "    for sentence in sentences:\n",
     "        \n",
     "        # Convert to lowercase letters\n",
-    "        sentence = None\n",
+    "        sentence = str.lower(sentence)\n",
     "        \n",
     "        # Convert into a list of words\n",
-    "        tokenized = None\n",
+    "        tokenized = nltk.wordpunct_tokenize(sentence)\n",
     "        \n",
     "        # append the list of words to the list of lists\n",
-    "        None\n",
+    "        tokenized_sentences.append(tokenized)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
