Implemented "get_tokenized_data"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -189,7 +189,7 @@
     "        A list of sentences\n",
     "    \"\"\"\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "    sentences = str.split(\"\\n\")\n",
+    "    sentences = data.split(\"\\n\")\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # Additional clearning (This part is already implemented)\n",
@@ -284,7 +284,7 @@
     "        sentence = str.lower(sentence)\n",
     "        \n",
     "        # Convert into a list of words\n",
-    "        tokenized = nltk.wordpunct_tokenize(sentence)\n",
+    "        tokenized = nltk.word_tokenize(sentence)\n",
     "        \n",
     "        # append the list of words to the list of lists\n",
     "        tokenized_sentences.append(tokenized)\n",
@@ -352,10 +352,10 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Get the sentences by splitting up the data\n",
-    "    sentences = None\n",
+    "    sentences = split_to_sentences(data)\n",
     "    \n",
     "    # Get the list of lists of tokens by tokenizing the sentences\n",
-    "    tokenized_sentences = None\n",
+    "    tokenized_sentences = tokenize_sentences(sentences)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
