Implemented "count_words"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -493,18 +493,18 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Loop through each sentence\n",
-    "    for sentence in None: # complete this line\n",
+    "    for sentence in tokenized_sentences: # complete this line\n",
     "        \n",
     "        # Go through each token in the sentence\n",
-    "        for token in None: # complete this line\n",
+    "        for token in sentence: # complete this line\n",
     "\n",
     "            # If the token is not in the dictionary yet, set the count to 1\n",
-    "            if None: # complete this line\n",
-    "                word_counts[token] = None\n",
+    "            if token not in word_counts: # complete this line\n",
+    "                word_counts[token] = 1\n",
     "            \n",
     "            # If the token is already in the dictionary, increment the count by 1\n",
     "            else:\n",
-    "                word_counts[token] += None\n",
+    "                word_counts[token] += 1\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    \n",
