Implemented "get_words_with_nplus_frequency"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -602,16 +602,15 @@
     "    word_counts = count_words(tokenized_sentences)\n",
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "\n",
+    "    \n",
     "    # for each word and its count\n",
-    "    for word, cnt in None: # complete this line\n",
-    "        \n",
+    "    for word, cnt in word_counts.items(): # complete this line\n",
     "        # check that the word's count\n",
     "        # is at least as great as the minimum count\n",
-    "        if None:\n",
+    "        if cnt >= count_threshold:\n",
     "            \n",
     "            # append the word to the list\n",
-    "            None\n",
+    "            closed_vocab.append(word)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return closed_vocab"
