Implemented "replace_oov_words_by_unk"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -692,15 +692,15 @@
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "\n",
     "        # for each token in the sentence\n",
-    "        for token in None: # complete this line\n",
+    "        for token in sentence: # complete this line\n",
     "            \n",
     "            # Check if the token is in the closed vocabulary\n",
-    "            if token in None: # complete this line\n",
+    "            if token in vocabulary: # complete this line\n",
     "                # If so, append the word to the replaced_sentence\n",
-    "                None\n",
+    "                replaced_sentence.append(token)\n",
     "            else:\n",
     "                # otherwise, append the unknown token instead\n",
-    "                None\n",
+    "                replaced_sentence.append(unknown_token)\n",
     "        ### END CODE HERE ###\n",
     "        \n",
     "        # Append the list of tokens to the list of lists\n",
