Implemented "preprocess_data"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -778,13 +778,13 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "\n",
     "    # Get the closed vocabulary using the train data\n",
-    "    vocabulary = None\n",
+    "    vocabulary = get_words_with_nplus_frequency(train_data, count_threshold)\n",
     "    \n",
     "    # For the train data, replace less common words with \"<unk>\"\n",
-    "    train_data_replaced = None\n",
+    "    train_data_replaced = replace_oov_words_by_unk(train_data, vocabulary)\n",
     "    \n",
     "    # For the test data, replace less common words with \"<unk>\"\n",
-    "    test_data_replaced = None\n",
+    "    test_data_replaced = replace_oov_words_by_unk(test_data, vocabulary)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return train_data_replaced, test_data_replaced, vocabulary"
