Implemented "count_n_grams"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -993,34 +993,34 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Go through each sentence in the data\n",
-    "    for sentence in None: # complete this line\n",
+    "    for sentence in data: # complete this line\n",
     "        \n",
     "        # prepend start token n times, and  append <e> one time\n",
-    "        sentence = None\n",
+    "        sentence = [start_token] * n + sentence + [end_token]\n",
     "        \n",
     "        # convert list to tuple\n",
     "        # So that the sequence of words can be used as\n",
     "        # a key in the dictionary\n",
-    "        sentence = None\n",
+    "        sentence = tuple(sentence)\n",
     "        \n",
     "        # Use 'i' to indicate the start of the n-gram\n",
     "        # from index 0\n",
     "        # to the last index where the end of the n-gram\n",
     "        # is within the sentence.\n",
     "        \n",
-    "        for i in range(None): # complete this line\n",
+    "        for i in range(len(sentence) - n + 1): # complete this line\n",
     "\n",
     "            # Get the n-gram from i to i+n\n",
-    "            n_gram = None\n",
+    "            n_gram = sentence[i:i+n]\n",
     "\n",
     "            # check if the n-gram is in the dictionary\n",
-    "            if n_gram in None: # complete this line\n",
+    "            if n_gram in n_grams: # complete this line\n",
     "            \n",
     "                # Increment the count for this n-gram\n",
-    "                n_grams[n_gram] += None\n",
+    "                n_grams[n_gram] += 1\n",
     "            else:\n",
     "                # Initialize this n-gram count to 1\n",
-    "                n_grams[n_gram] = None\n",
+    "                n_grams[n_gram] = 1\n",
     "    \n",
     "            ### END CODE HERE ###\n",
     "    return n_grams"
