Implemented "estimate_probability"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -1136,26 +1136,26 @@
     "    # If the previous n-gram exists in the dictionary of n-gram counts,\n",
     "    # Get its count.  Otherwise set the count to zero\n",
     "    # Use the dictionary that has counts for n-grams\n",
-    "    previous_n_gram_count = None\n",
+    "    previous_n_gram_count = n_gram_counts.get(previous_n_gram, 0)\n",
     "        \n",
     "    # Calculate the denominator using the count of the previous n gram\n",
     "    # and apply k-smoothing\n",
-    "    denominator = None\n",
+    "    denominator = previous_n_gram_count + k * vocabulary_size\n",
     "\n",
     "    # Define n plus 1 gram as the previous n-gram plus the current word as a tuple\n",
-    "    n_plus1_gram = None\n",
+    "    n_plus1_gram = previous_n_gram + (word,)\n",
     "  \n",
     "    # Set the count to the count in the dictionary,\n",
     "    # otherwise 0 if not in the dictionary\n",
     "    # use the dictionary that has counts for the n-gram plus current word\n",
-    "    n_plus1_gram_count = None\n",
+    "    n_plus1_gram_count = n_plus1_gram_counts.get(n_plus1_gram, 0)\n",
     "        \n",
     "    # Define the numerator use the count of the n-gram plus current word,\n",
     "    # and apply smoothing\n",
-    "    numerator = None\n",
+    "    numerator = n_plus1_gram_count + k\n",
     "\n",
     "    # Calculate the probability as the numerator divided by denominator\n",
-    "    probability = None\n",
+    "    probability = numerator / denominator\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
