Implemented "calculate_perplexity"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -1568,26 +1568,26 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # Index t ranges from n to N - 1, inclusive on both ends\n",
-    "    for t in range(None, None): # complete this line\n",
+    "    for t in range(n, N): # complete this line\n",
     "\n",
     "        # get the n-gram preceding the word at position t\n",
-    "        n_gram = None\n",
+    "        n_gram = sentence[t-n:t]\n",
     "        \n",
     "        # get the word at position t\n",
-    "        word = None\n",
+    "        word = sentence[t]\n",
     "        \n",
     "        # Estimate the probability of the word given the n-gram\n",
     "        # using the n-gram counts, n-plus1-gram counts,\n",
     "        # vocabulary size, and smoothing constant\n",
-    "        probability = None\n",
+    "        probability = estimate_probability(word,n_gram,n_gram_counts,n_plus1_gram_counts,vocabulary_size,k)\n",
     "        \n",
     "        # Update the product of the probabilities\n",
     "        # This 'product_pi' is a cumulative product \n",
     "        # of the (1/P) factors that are calculated in the loop\n",
-    "        product_pi *= None\n",
+    "        product_pi *= 1/probability\n",
     "\n",
     "    # Take the Nth root of the product\n",
-    "    perplexity = None\n",
+    "    perplexity = product_pi ** (1/N)\n",
     "    \n",
     "    ### END CODE HERE ### \n",
     "    return perplexity"
