Implemented "suggest_a_word"

--- a/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-3/C2_W3_Assignment.ipynb
@@ -1725,26 +1725,26 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    \n",
     "    # For each word and its probability in the probabilities dictionary:\n",
-    "    for word, prob in None: # complete this line\n",
+    "    for word, prob in probabilities.items(): # complete this line\n",
     "        \n",
     "        # If the optional start_with string is set\n",
-    "        if None: # complete this line\n",
+    "        if start_with: # complete this line\n",
     "            \n",
     "            # Check if the beginning of word does not match with the letters in 'start_with'\n",
-    "            if None: # complete this line\n",
+    "            if not word.startswith(start_with): # complete this line\n",
     "\n",
     "                # if they don't match, skip this word (move onto the next word)\n",
-    "                None # complete this line\n",
+    "                continue # complete this line\n",
     "        \n",
     "        # Check if this word's probability\n",
     "        # is greater than the current maximum probability\n",
-    "        if None: # complete this line\n",
+    "        if probabilities[word] > max_prob: # complete this line\n",
     "            \n",
     "            # If so, save this word as the best suggestion (so far)\n",
-    "            suggestion = None\n",
+    "            suggestion = word\n",
     "            \n",
     "            # Save the new maximum probability\n",
-    "            max_prob = None\n",
+    "            max_prob = probabilities[word]\n",
     "\n",
     "    ### END CODE HERE\n",
     "    \n",
