--- a/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
@@ -220,13 +220,13 @@
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # W1 has shape (N,V)\n",
-    "    W1 = None\n",
+    "    W1 = np.random.rand(N,V)\n",
     "    # W2 has shape (V,N)\n",
-    "    W2 = None\n",
+    "    W2 = np.random.rand(V,N)\n",
     "    # b1 has shape (N,1)\n",
-    "    b1 = None\n",
+    "    b1 = np.random.rand(N,1)\n",
     "    # b2 has shape (V,1)\n",
-    "    b2 = None\n",
+    "    b2 = np.random.rand(V,1)\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return W1, W2, b1, b2"
@@ -899,7 +899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
