--- a/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
@@ -313,7 +313,9 @@
     "    ### START CODE HERE (Replace instances of 'None' with your own code) ###\n",
     "    \n",
     "    # Calculate yhat (softmax)\n",
-    "    yhat = None\n",
+    "    e_z = np.exp(z)\n",
+    "    sum_e_z = np.sum(e_z,axis=0)\n",
+    "    yhat = e_z / sum_e_z\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
