Implemented "forward_prop"

--- a/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
@@ -406,13 +406,13 @@
     "    ### START CODE HERE (Replace instances of 'None' with your own code) ###\n",
     "    \n",
     "    # Calculate h\n",
-    "    h = None\n",
+    "    h = np.dot(W1,x) + b1\n",
     "    \n",
     "    # Apply the relu on h (store result in h)\n",
-    "    h = None\n",
+    "    h = np.maximum(0,h)\n",
     "    \n",
     "    # Calculate z\n",
-    "    z = None\n",
+    "    z = np.dot(W2,h) + b2\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
