Implemented "back_prop"

--- a/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
@@ -596,17 +596,17 @@
     "    \n",
     "    # Compute l1 as W2^T (Yhat - Y)\n",
     "    # Re-use it whenever you see W2^T (Yhat - Y) used to compute a gradient\n",
-    "    l1 = None\n",
+    "    l1 = np.dot(W2.T, yhat - y)\n",
     "    # Apply relu to l1\n",
-    "    l1 = None\n",
+    "    l1 = np.maximum(0,l1)\n",
     "    # Compute the gradient of W1\n",
-    "    grad_W1 = None\n",
+    "    grad_W1 = np.dot(l1, x.T)\n",
     "    # Compute the gradient of W2\n",
-    "    grad_W2 = None\n",
+    "    grad_W2 = np.dot(yhat - y, h.T)\n",
     "    # Compute the gradient of b1\n",
-    "    grad_b1 = None\n",
+    "    grad_b1 = l1\n",
     "    # Compute the gradient of b2\n",
-    "    grad_b2 = None\n",
+    "    grad_b2 = yhat - y\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return grad_W1, grad_W2, grad_b1, grad_b2"
