--- a/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
+++ b/nlp-with-probalistic-models/week-4/C2_W4_Assignment.ipynb
@@ -600,13 +600,13 @@
     "    # Apply relu to l1\n",
     "    l1 = np.maximum(0,l1)\n",
     "    # Compute the gradient of W1\n",
-    "    grad_W1 = np.dot(l1, x.T)\n",
+    "    grad_W1 = np.dot(l1,x.T)/batch_size\n",
     "    # Compute the gradient of W2\n",
-    "    grad_W2 = np.dot(yhat - y, h.T)\n",
+    "    grad_W2 = np.dot(yhat - y, h.T)/batch_size\n",
     "    # Compute the gradient of b1\n",
-    "    grad_b1 = l1\n",
+    "    grad_b1 = np.sum(l1,axis=1,keepdims=True)/batch_size\n",
     "    # Compute the gradient of b2\n",
-    "    grad_b2 = yhat - y\n",
+    "    grad_b2 = np.sum(yhat-y,axis=1,keepdims=True)/batch_size\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return grad_W1, grad_W2, grad_b1, grad_b2"
@@ -745,21 +745,21 @@
     "    for x, y in get_batches(data, word2Ind, V, C, batch_size):\n",
     "        ### START CODE HERE (Replace instances of 'None' with your own code) ###\n",
     "        # Get z and h\n",
-    "        z, h = None\n",
+    "        z, h = forward_prop(x, W1, W2, b1, b2)\n",
     "        # Get yhat\n",
-    "        yhat = None\n",
+    "        yhat = softmax(z)\n",
     "        # Get cost\n",
-    "        cost = None\n",
+    "        cost = compute_cost(y, yhat, batch_size)\n",
     "        if ( (iters+1) % 10 == 0):\n",
     "            print(f\"iters: {iters + 1} cost: {cost:.6f}\")\n",
     "        # Get gradients\n",
-    "        grad_W1, grad_W2, grad_b1, grad_b2 = None\n",
+    "        grad_W1, grad_W2, grad_b1, grad_b2 = back_prop(x, yhat, y, h, W1, W2, b1, b2, batch_size)\n",
     "        \n",
     "        # Update weights and biases\n",
-    "        W1 = None \n",
-    "        W2 = None\n",
-    "        b1 = None\n",
-    "        b2 = None\n",
+    "        W1 = W1 - alpha * grad_W1\n",
+    "        W2 = W2 - alpha * grad_W2\n",
+    "        b1 = b1 - alpha * grad_b1\n",
+    "        b2 = b2 - alpha * grad_b2\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
