Implemented "input_encoder_fn"

--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -601,10 +601,10 @@
     "        \n",
     "        ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "        # create an embedding layer to convert tokens to vectors\n",
-    "        None,\n",
+    "        tl.Embedding(vocab_size=input_vocab_size, d_feature=d_model),\n",
     "        \n",
     "        # feed the embeddings to the LSTM layers. It is a stack of n_encoder_layers LSTM layers\n",
-    "        [None for _ in None]\n",
+    "        [tl.LSTM(n_units=d_model) for _ in range(n_encoder_layers)]\n",
     "        ### END CODE HERE ###\n",
     "    )\n",
     "\n",
@@ -1976,7 +1976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
