--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -63,20 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:tokens_length=568 inputs_length=512 targets_length=114 noise_density=0.15 mean_noise_span_length=3.0 \n",
-      "trax                     1.3.4\n",
-      "\u001b[33mWARNING: You are using pip version 20.1.1; however, version 21.0 is available.\n",
-      "You should consider upgrading via the '/opt/conda/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from termcolor import colored\n",
     "import random\n",
@@ -100,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,19 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mtrain data (en, de) tuple:\u001b[0m (b'Tel: +421 2 57 103 777\\n', b'Tel: +421 2 57 103 777\\n')\n",
-      "\n",
-      "\u001b[31meval data (en, de) tuple:\u001b[0m (b'Lutropin alfa Subcutaneous use.\\n', b'Pulver zur Injektion Lutropin alfa Subkutane Anwendung\\n')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_stream = train_stream_fn()\n",
     "print(colored('train data (en, de) tuple:', 'red'), next(train_stream))\n",
@@ -165,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,21 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mSingle tokenized example input:\u001b[0m [ 2538  2248    30 12114 23184 16889     5     2 20852  6456 20592  5812\n",
-      "  3932    96  5178  3851    30  7891  3550 30650  4729   992     1]\n",
-      "\u001b[31mSingle tokenized example target:\u001b[0m [ 1872    11  3544    39  7019 17877 30432    23  6845    10 14222    47\n",
-      "  4004    18 21674     5 27467  9513   920   188 10630    18  3550 30650\n",
-      "  4729   992     1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Filter too long sentences to not run out of memory.\n",
     "# length_keys=[0, 1] means we filter both English and German sentences, so\n",
@@ -271,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,23 +307,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mSingle detokenized example input:\u001b[0m During treatment with olanzapine, adolescents gained significantly more weight compared with adults.\n",
-      "\n",
-      "\u001b[31mSingle detokenized example target:\u001b[0m Während der Behandlung mit Olanzapin nahmen die Jugendlichen im Vergleich zu Erwachsenen signifikant mehr Gewicht zu.\n",
-      "\n",
-      "\n",
-      "\u001b[32mtokenize('hello'): \u001b[0m [[17332   140     1]]\n",
-      "\u001b[32mdetokenize([17332, 140, 1]): \u001b[0m hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# As declared earlier:\n",
     "# VOCAB_FILE = 'ende_32k.subword'\n",
@@ -393,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,20 +387,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input_batch data type:  <class 'numpy.ndarray'>\n",
-      "target_batch data type:  <class 'numpy.ndarray'>\n",
-      "input_batch shape:  (32, 64)\n",
-      "target_batch shape:  (32, 64)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_batch, target_batch, mask_batch = next(train_batch_stream)\n",
     "\n",
@@ -471,40 +413,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mTHIS IS THE ENGLISH SENTENCE: \n",
-      "\u001b[0m Galantamine and donepezil do not show a clinically relevant effect on the pharmacokinetics of risperidone and on the active antipsychotic fraction.\n",
-      " \n",
-      "\n",
-      "\u001b[31mTHIS IS THE TOKENIZED VERSION OF THE ENGLISH SENTENCE: \n",
-      " \u001b[0m [32114  6083 10166     8  5305  4472 24010   215   127    48  1026    13\n",
-      " 20571  1805  3031  1520    22     4  6826  7211  3853  8834 20293  1978\n",
-      "     7  6804  5499   866     8    22     4  2373  2646 10108  2390 29246\n",
-      "  3550 30650  4729   992     1     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0] \n",
-      "\n",
-      "\u001b[31mTHIS IS THE GERMAN TRANSLATION: \n",
-      "\u001b[0m Galantamin und Donepezil zeigen keine klinisch relevanten Auswirkungen auf die Pharmakokinetik von Risperidon und der aktiven antipsychotischen Fraktion.\n",
-      " \n",
-      "\n",
-      "\u001b[31mTHIS IS THE TOKENIZED VERSION OF THE GERMAN TRANSLATION: \n",
-      "\u001b[0m [32114  6083  5251    12 18623  4472 24010   215  1628   249 23489  1212\n",
-      " 12039    23  1191    37    10 15881 23486  6469  7174    21 10513  5499\n",
-      "  1859    12    11 17916  2646 10108  3021  1083  3550 30650  4729   992\n",
-      "     1     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
-      "     0     0     0     0] \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pick a random index less than the batch size.\n",
     "index = random.randrange(len(input_batch))\n",
@@ -578,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,23 +531,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-fee1af6f1abf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mw1_unittest\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mw1_unittest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtest_input_encoder_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_encoder_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m# END UNIT TEST\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/work/w1_unittest.py\u001b[0m in \u001b[0;36mtest_input_encoder_fn\u001b[0;34m(input_encoder_fn)\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0mn_encoder_layers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 98\u001b[0;31m     \u001b[0mencoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_vocab_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_encoder_layers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     99\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[0mlstms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34mf'  LSTM_{d_model}'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mn_encoder_layers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-12-1b626213a70d>\u001b[0m in \u001b[0;36minput_encoder_fn\u001b[0;34m(input_vocab_size, d_model, n_encoder_layers)\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# feed the embeddings to the LSTM layers. It is a stack of n_encoder_layers LSTM layers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m         \u001b[0;31m### END CODE HERE ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     )\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# BEGIN UNIT TEST\n",
     "import w1_unittest\n",
@@ -693,13 +590,13 @@
     "        ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "        # shift right to insert start-of-sentence token and implement\n",
     "        # teacher forcing during training\n",
-    "        None,\n",
+    "        tl.ShiftRight(mode=mode),\n",
     "\n",
     "        # run an embedding layer to convert tokens to vectors\n",
-    "        None,\n",
+    "        tl.Embedding(vocab_size=target_vocab_size, d_feature=d_model),\n",
     "\n",
     "        # feed to an LSTM layer\n",
-    "        None\n",
+    "        tl.LSTM(n_units=d_model)\n",
     "        ### END CODE HERE ###\n",
     "    )\n",
     "    \n",
