Implemented "prepare_attention_input"

--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -655,16 +655,16 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "    \n",
     "    # set the keys and values to the encoder activations\n",
-    "    keys = None\n",
-    "    values = None\n",
+    "    keys = encoder_activations\n",
+    "    values = encoder_activations\n",
     "\n",
     "    \n",
     "    # set the queries to the decoder activations\n",
-    "    queries = None\n",
+    "    queries = decoder_activations\n",
     "    \n",
     "    # generate the mask to distinguish real tokens from padding\n",
     "    # hint: inputs is 1 for real tokens and 0 where they are padding\n",
-    "    mask = None\n",
+    "    mask = inputs != 0\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
