--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -796,38 +796,38 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "    \n",
     "    # Step 0: call the helper function to create layers for the input encoder\n",
-    "    input_encoder = None\n",
+    "    input_encoder = input_encoder_fn(input_vocab_size, d_model, n_encoder_layers)\n",
     "\n",
     "    # Step 0: call the helper function to create layers for the pre-attention decoder\n",
-    "    pre_attention_decoder = None\n",
+    "    pre_attention_decoder = pre_attention_decoder_fn(mode, target_vocab_size, d_model)\n",
     "\n",
     "    # Step 1: create a serial network\n",
     "    model = tl.Serial( \n",
     "        \n",
     "      # Step 2: copy input tokens and target tokens as they will be needed later.\n",
-    "      None,\n",
+    "      tl.Select([0,1,0,1]),\n",
     "        \n",
     "      # Step 3: run input encoder on the input and pre-attention decoder the target.\n",
-    "      None(None, None),\n",
+    "      tl.Parallel(input_encoder, pre_attention_decoder),\n",
     "        \n",
     "      # Step 4: prepare queries, keys, values and mask for attention.\n",
-    "      None('PrepareAttentionInput', None, n_out=4),\n",
+    "      tl.Fn('PrepareAttentionInput', prepare_attention_input, n_out=4),\n",
     "        \n",
     "      # Step 5: run the AttentionQKV layer\n",
     "      # nest it inside a Residual layer to add to the pre-attention decoder activations(i.e. queries)\n",
-    "      tl.Residual(tl.AttentionQKV(None, n_heads=n_attention_heads, dropout=attention_dropout, mode=None)),\n",
+    "      tl.Residual(tl.AttentionQKV(d_model, n_heads=n_attention_heads, dropout=attention_dropout, mode=mode)),\n",
     "      \n",
     "      # Step 6: drop attention mask (i.e. index = None\n",
-    "      None,\n",
+    "      tl.Select([0,2]),\n",
     "        \n",
     "      # Step 7: run the rest of the RNN decoder\n",
-    "      [None for _ in range(None)],\n",
+    "      [tl.LSTM(n_units=d_model) for _ in range(n_decoder_layers)],\n",
     "        \n",
     "      # Step 8: prepare output by making it the right size\n",
-    "      None(None),\n",
+    "      tl.Dense(target_vocab_size),\n",
     "        \n",
     "      # Step 9: Log-softmax for output\n",
-    "      None\n",
+    "      tl.LogSoftmax()\n",
     "    )\n",
     "    \n",
     "    ### END CODE HERE\n",
