Implemented Training task

--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -941,20 +941,20 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "    \n",
     "    # use the train batch stream as labeled data\n",
-    "    labeled_data= None,\n",
+    "    labeled_data= train_batch_stream,\n",
     "    \n",
     "    # use the cross entropy loss\n",
-    "    loss_layer= None,\n",
+    "    loss_layer= tl.CrossEntropyLoss(),\n",
     "    \n",
     "    # use the Adam optimizer with learning rate of 0.01\n",
-    "    optimizer= None,\n",
+    "    optimizer= trax.optimizers.Adam(0.01),\n",
     "    \n",
     "    # use the `trax.lr.warmup_and_rsqrt_decay` as the learning rate schedule\n",
     "    # have 1000 warmup steps with a max value of 0.01\n",
-    "    lr_schedule= None,\n",
+    "    lr_schedule= trax.lr.warmup_and_rsqrt_decay(1000, 0.01),\n",
     "    \n",
     "    # have a checkpoint every 10 steps\n",
-    "    n_steps_per_checkpoint= None,\n",
+    "    n_steps_per_checkpoint= 10,\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     ")"
