Implemented "sampling_decode"

--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -1138,28 +1138,28 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "\n",
     "    # set the length of the current output tokens\n",
-    "    token_length = None\n",
+    "    token_length = len(cur_output_tokens)\n",
     "\n",
     "    # calculate next power of 2 for padding length \n",
-    "    padded_length = None\n",
+    "    padded_length = np.power(2, int(np.ceil(np.log2(token_length + 1))))\n",
     "\n",
     "    # pad cur_output_tokens up to the padded_length\n",
-    "    padded = cur_output_tokens + None\n",
+    "    padded = cur_output_tokens + [0] * (padded_length - token_length)\n",
     "    \n",
     "    # model expects the output to have an axis for the batch size in front so\n",
     "    # convert `padded` list to a numpy array with shape (x, <padded_length>) where the\n",
     "    # x position is the batch axis. (hint: you can use np.expand_dims() with axis=0 to insert a new axis)\n",
-    "    padded_with_batch = None\n",
+    "    padded_with_batch = np.expand_dims(padded, axis=0)\n",
     "\n",
     "    # get the model prediction. remember to use the `NMTAttn` argument defined above.\n",
     "    # hint: the model accepts a tuple as input (e.g. `my_model((input1, input2))`)\n",
-    "    output, _ = None\n",
+    "    output, _ = NMTAttn((input_tokens, padded_with_batch))\n",
     "    \n",
     "    # get log probabilities from the last token output\n",
-    "    log_probs = output[None]\n",
+    "    log_probs = output[0, token_length, :]\n",
     "\n",
     "    # get the next symbol by getting a logsoftmax sample (*hint: cast to an int)\n",
-    "    symbol = None\n",
+    "    symbol = int(tl.logsoftmax_sample(log_probs, temperature))\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -1220,28 +1220,28 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "    \n",
     "    # encode the input sentence\n",
-    "    input_tokens = None\n",
+    "    input_tokens = tokenize(input_sentence,vocab_file,vocab_dir)\n",
     "    \n",
     "    # initialize the list of output tokens\n",
-    "    cur_output_tokens = None\n",
+    "    cur_output_tokens = []\n",
     "    \n",
     "    # initialize an integer that represents the current output index\n",
-    "    cur_output = None\n",
+    "    cur_output = 0\n",
     "    \n",
     "    # Set the encoding of the \"end of sentence\" as 1\n",
-    "    EOS = None\n",
+    "    EOS = 1\n",
     "    \n",
     "    # check that the current output is not the end of sentence token\n",
     "    while cur_output != EOS:\n",
     "        \n",
     "        # update the current output token by getting the index of the next word (hint: use next_symbol)\n",
-    "        cur_output, log_prob = None\n",
+    "        cur_output, log_prob = next_symbol(NMTAttn, input_tokens, cur_output_tokens, temperature)\n",
     "        \n",
     "        # append the current output token to the list of output tokens\n",
     "        cur_output_tokens.append(cur_output)\n",
     "    \n",
     "    # detokenize the output tokens\n",
-    "    sentence = None\n",
+    "    sentence = detokenize(cur_output_tokens, vocab_file, vocab_dir)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
