Implemented "mbr_decode"

--- a/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
+++ b/nlp-with-attention/week-1/C4_W1_Assignment.ipynb
@@ -1495,41 +1495,40 @@
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "    \n",
     "    # make a frequency table of the system tokens (hint: use the Counter class)\n",
-    "    sys_counter = None\n",
+    "    sys_counter = Counter(system)\n",
     "    \n",
     "    # make a frequency table of the reference tokens (hint: use the Counter class)\n",
-    "    ref_counter = None\n",
+    "    ref_counter = Counter(reference)\n",
     "    \n",
     "    # initialize overlap to 0\n",
-    "    overlap = None\n",
+    "    overlap = 0\n",
     "    \n",
     "    # run a for loop over the sys_counter object (can be treated as a dictionary)\n",
     "    for token in sys_counter:\n",
     "        \n",
     "        # lookup the value of the token in the sys_counter dictionary (hint: use the get() method)\n",
-    "        token_count_sys = None\n",
+    "        token_count_sys = sys_counter.get(token,0)\n",
     "        \n",
     "        # lookup the value of the token in the ref_counter dictionary (hint: use the get() method)\n",
-    "        token_count_ref = None\n",
+    "        token_count_ref = ref_counter.get(token,0)\n",
     "        \n",
     "        # update the overlap by getting the smaller number between the two token counts above\n",
-    "        overlap += None\n",
+    "        overlap += min(token_count_sys, token_count_ref)\n",
     "    \n",
     "    # get the precision (i.e. number of overlapping tokens / number of system tokens)\n",
-    "    precision = None\n",
+    "    precision = overlap / sum(sys_counter.values())\n",
     "    \n",
     "    # get the recall (i.e. number of overlapping tokens / number of reference tokens)\n",
-    "    recall = None\n",
+    "    recall = overlap / sum(ref_counter.values())\n",
     "    \n",
     "    if precision + recall != 0:\n",
     "        # compute the f1-score\n",
-    "        rouge1_score = None\n",
+    "        rouge1_score = 2 * ((precision * recall)/(precision + recall))\n",
     "    else:\n",
     "        rouge1_score = 0 \n",
     "    ### END CODE HERE ###\n",
     "    \n",
-    "    return rouge1_score\n",
-    "    \n"
+    "    return rouge1_score"
    ]
   },
   {
@@ -1606,7 +1605,7 @@
     "        ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "        \n",
     "        # initialize overlap to 0.0\n",
-    "        overlap = None\n",
+    "        overlap = 0.0\n",
     "        \n",
     "        # run a for loop for each sample\n",
     "        for index_sample, sample in enumerate(samples): \n",
@@ -1616,16 +1615,16 @@
     "                continue\n",
     "                \n",
     "            # get the overlap between candidate and sample using the similarity function\n",
-    "            sample_overlap = None\n",
+    "            sample_overlap = similarity_fn(candidate,sample)\n",
     "            \n",
     "            # add the sample overlap to the total overlap\n",
-    "            overlap += None\n",
+    "            overlap += sample_overlap\n",
     "            \n",
     "        # get the score for the candidate by computing the average\n",
-    "        score = None\n",
+    "        score = overlap/index_sample\n",
     "        \n",
     "        # save the score in the dictionary. use index as the key.\n",
-    "        scores[index_candidate] = None\n",
+    "        scores[index_candidate] = score\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "    return scores"
@@ -1766,18 +1765,18 @@
     "    \n",
     "    ### START CODE HERE (REPLACE INSTANCES OF `None` WITH YOUR CODE) ###\n",
     "    # generate samples\n",
-    "    samples, log_probs = None\n",
+    "    samples, log_probs = generate_samples(sentence, n_samples, NMTAttn, temperature, vocab_file, vocab_dir)\n",
     "    \n",
     "    # use the scoring function to get a dictionary of scores\n",
     "    # pass in the relevant parameters as shown in the function definition of \n",
     "    # the mean methods you developed earlier\n",
-    "    scores = None\n",
+    "    scores = weighted_avg_overlap(jaccard_similarity, samples, log_probs)\n",
     "    \n",
     "    # find the key with the highest score\n",
-    "    max_index = None\n",
+    "    max_index = max(scores, key=scores.get)\n",
     "    \n",
     "    # detokenize the token list associated with the max_index\n",
-    "    translated_sentence = None\n",
+    "    translated_sentence = detokenize(samples[max_index], vocab_file, vocab_dir)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return (translated_sentence, max_index, scores)"
