--- a/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
+++ b/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
@@ -722,28 +722,28 @@
     "\n",
     "    ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "    # Save depth/dimension of the query embedding for scaling down the dot product\n",
-    "    depth = None\n",
+    "    depth = query.shape[-1] \n",
     "\n",
     "    # Calculate scaled query key dot product according to formula above\n",
-    "    dots = jnp.matmul(None, jnp.swapaxes(None, None, None)) / jnp.sqrt(None)\n",
+    "    dots = jnp.matmul(query, jnp.swapaxes(key, -1, -2)) / jnp.sqrt(depth)\n",
     "    \n",
     "    # Apply the mask\n",
     "    if mask is not None: # The 'None' in this line does not need to be replaced\n",
-    "        dots = jnp.where(None, None, jnp.full_like(None, -1e9))\n",
+    "        dots = jnp.where(mask, dots, jnp.full_like(dots, -1e9))\n",
     "    \n",
     "    # Softmax formula implementation\n",
     "    # Use trax.fastmath.logsumexp of dots to avoid underflow by division by large numbers\n",
     "    # Hint: Last axis should be used and keepdims should be True\n",
     "    # Note: softmax = e^(dots - logsumexp(dots)) = E^dots / sumexp(dots)\n",
-    "    logsumexp = None\n",
+    "    logsumexp = trax.fastmath.logsumexp(dots, axis=-1, keepdims=True)\n",
     "\n",
     "    # Take exponential of dots minus logsumexp to get softmax\n",
     "    # Use jnp.exp()\n",
-    "    dots = None\n",
+    "    dots = jnp.exp(dots - logsumexp)\n",
     "\n",
     "    # Multiply dots by value to get self-attention\n",
     "    # Use jnp.matmul()\n",
-    "    attention = None\n",
+    "    attention = jnp.matmul(dots, value)\n",
     "\n",
     "    ## END CODE HERE ###\n",
     "    \n",
@@ -2025,7 +2025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
