Implement "compute_attention_heads_closure"

--- a/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
+++ b/nlp-with-attention/week-2/C4_W2_Assignment.ipynb
@@ -877,20 +877,20 @@
     "        ### START CODE HERE (REPLACE INSTANCES OF 'None' with your code) ###\n",
     "        \n",
     "        # Size of the x's batch dimension\n",
-    "        batch_size = None\n",
+    "        batch_size = x.shape[0]\n",
     "        # Length of the sequence\n",
     "        # Should be size of x's first dimension without counting the batch dim\n",
-    "        seqlen = None\n",
+    "        seqlen = x.shape[1]\n",
     "        # Reshape x using jnp.reshape()\n",
     "        # batch_size, seqlen, n_heads*d_head -> batch_size, seqlen, n_heads, d_head\n",
-    "        x = None\n",
+    "        x = jnp.reshape(x, (batch_size, seqlen, n_heads, d_head))\n",
     "        # Transpose x using jnp.transpose()\n",
     "        # batch_size, seqlen, n_heads, d_head -> batch_size, n_heads, seqlen, d_head\n",
     "        # Note that the values within the tuple are the indexes of the dimensions of x and you must rearrange them\n",
-    "        x = jnp.transpose(x, (None, None, None, None))\n",
+    "        x = jnp.transpose(x, (0, 2, 1, 3))\n",
     "        # Reshape x using jnp.reshape()\n",
     "        # batch_size, n_heads, seqlen, d_head -> batch_size*n_heads, seqlen, d_head\n",
-    "        x = None\n",
+    "        x = jnp.reshape(x, (-1, seqlen, d_head))\n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        \n",
